# agent-skills

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  AGENTS.md  LICENSE  README.md  devenv.nix  devenv.yaml  pyproject.toml
.agents/skills/: grace-lite-ask  grace-lite-fix  grace-lite-init  grace-lite-refresh  grace-lite-reviewer
.claude/skills/: grace-lite  grace-lite-reviewer  grep-app-cli
.github/: dependabot.yml
.github/workflows/: pr.yml
skills/grace-lite/: README.md  SKILL.md
skills/grace-lite-ask/: README.md  SKILL.md
skills/grace-lite-ask/agents/: openai.yaml
skills/grace-lite-fix/: README.md  SKILL.md
skills/grace-lite-fix/agents/: openai.yaml
skills/grace-lite-init/: README.md  SKILL.md
skills/grace-lite-init/agents/: openai.yaml
skills/grace-lite-init/assets/: AGENTS.tmpl.md  knowledge-graph.tmpl.xml
skills/grace-lite-init/scripts/: grace_check.py  init_grace_lite.py
skills/grace-lite-refresh/: README.md  SKILL.md
skills/grace-lite-refresh/agents/: openai.yaml
skills/grace-lite-reviewer/: README.md  SKILL.md
skills/grace-lite-reviewer/agents/: openai.yaml
skills/grace-lite/agents/: openai.yaml
skills/grace-lite/assets/: AGENTS.md.template  _semantic_template_reference.cs  _semantic_template_reference.js  _semantic_template_reference.jsx  (+8 more)
skills/grep-app-cli/: SKILL.md
tests/grace-lite/: test_cli.py  test_findings_report.py  test_source_validation.py  test_xml_validation.py
tests/grace-lite-init/: test_cli.py  test_findings_report.py  test_init.py  test_source_validation.py  test_xml_validation.py
(+8 files in other folders)
